--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,16 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.blueprints</groupId>
+    	<artifactId>blueprints-core</artifactId>
+    	<version>2.4.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>edu.stanford.ramcloud</groupId>
+    	<artifactId>jramcloud</artifactId>
+    	<version>1.0.0</version>
+    	<systemPath>/home/jdellit/ramcloud/bindings/java/</systemPath>
+    </dependency>
   </dependencies>
 </project>
