--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>blueprints-core</artifactId>
     	<version>2.4.0</version>
     </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.rexster</groupId>
+    	<artifactId>rexster-core</artifactId>
+    	<version>2.4.0</version>
+    </dependency>
   </dependencies>
 </project>
