Adding RamCloudGraphTest as first shot at running the generic blueprints graph test suite over RamCloudGraph.
Also made many minor modifications to RamCloudGraph, RamCloudEdge, and
RamCloudVertex, including adding code to scope out the exact type of
Object id.

--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
     	<artifactId>rexster-core</artifactId>
     	<version>2.4.0</version>
     </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.blueprints</groupId>
+    	<artifactId>blueprints-test</artifactId>
+    	<version>2.4.0</version>
+    </dependency>
   </dependencies>
 </project>
