--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,10 @@
     	<artifactId>blueprints-test</artifactId>
     	<version>2.4.0</version>
     </dependency>
+    <dependency>
+    	<groupId>com.google.protobuf</groupId>
+    	<artifactId>protobuf-java</artifactId>
+    	<version>2.5.0</version>
+    </dependency>
   </dependencies>
 </project>
