--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,41 @@
     	<artifactId>protobuf-java</artifactId>
     	<version>2.4.1</version>
     </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop</groupId>
+    	<artifactId>furnace</artifactId>
+    	<version>0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop</groupId>
+    	<artifactId>pipes</artifactId>
+    	<version>2.0.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.gremlin</groupId>
+    	<artifactId>gremlin</artifactId>
+    	<version>2.0.0</version>
+    	<type>pom</type>
+    </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.gremlin</groupId>
+    	<artifactId>gremlin-java</artifactId>
+    	<version>2.0.0</version>
+    </dependency>
   </dependencies>
+  
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Central Repository</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+    </repository>
+  </repositories>
 </project>
