--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
     	<artifactId>gremlin-java</artifactId>
     	<version>2.0.0</version>
     </dependency>
+    <dependency>
+    	<groupId>com.tinkerpop.blueprints</groupId>
+    	<artifactId>blueprints-graph-jung</artifactId>
+    	<version>2.4.0</version>
+    </dependency>
   </dependencies>
   
   <repositories>
